--- a/_data/data.yml
+++ b/_data/data.yml
@@ -14,6 +14,8 @@ contact:
   print: Print this page 
   timezone: utc-3
 
+  remote: true
+
 hardskills:
   skill:
     - Linux, CI/CD, Gitlab, Ansible, VMware, Proxmox, Hyper-V
